---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/off/code-block.typ
---
#let alert(
  body,
  fill: red,
) = {
  set text(white)
  set align(center)
  // @typstyle off
  rect(
    fill: fill,
        inset: 8pt,
    radius: 4pt, [*Warning:\ #body*],
  )
}

// @typstyle off
#alert[
  Danger is imminent!]
